--- a/docker_build/debian/Dockerfile
+++ b/docker_build/debian/Dockerfile
@@ -22,4 +22,9 @@ VOLUME [ "/sw", "/code" , "/root/.cmake"]
 
 COPY build.sh /root/build.sh
 
+# correct newlines for when building from windows
+RUN apt-get install -y dos2unix
+RUN dos2unix /root/build.sh /root/build.sh
+
 ENTRYPOINT /root/build.sh
+#ENTRYPOINT /code/cld/build/cld -H http://host.docker.internal:2376/ sys ver
