only incremental build in linux

--- a/docker_build/debian/Dockerfile
+++ b/docker_build/debian/Dockerfile
@@ -20,11 +20,10 @@ RUN apt-get update && \
 # another for the code to be built
 VOLUME [ "/sw", "/code" , "/root/.cmake"]
 
-COPY build.sh /root/build.sh
-
 # correct newlines for when building from windows
 RUN apt-get install -y dos2unix
-RUN dos2unix /root/build.sh /root/build.sh
+COPY build.sh /root/build.sh
+RUN dos2unix /root/build.sh
 
 ENTRYPOINT /root/build.sh
 #ENTRYPOINT /code/cld/build/cld -H http://host.docker.internal:2376/ sys ver
