added some more files to package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,18 +110,23 @@ SET(CPACK_PACKAGE_VERSION_MAJOR "0")
 SET(CPACK_PACKAGE_VERSION_MINOR "1")
 SET(CPACK_PACKAGE_VERSION_PATCH "0")
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CLD")
+FILE(GLOB CLD_DEPS_LICENSE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.*")
+INSTALL(FILES ${CPACK_PACKAGE_DESCRIPTION_FILE} DESTINATION .)
+INSTALL(FILES ${CPACK_RESOURCE_FILE_LICENSE} DESTINATION .)
+INSTALL(FILES ${CLD_DEPS_LICENSE_FILES} DESTINATION .)
 IF(WIN32 AND NOT UNIX)
   # There is a bug in NSI that does not handle full unix paths properly. Make
   # sure there is at least one set of four (4) backlasshes.
   #SET(CPACK_PACKAGE_ICON "${CMake_SOURCE_DIR}/Utilities/Release\\\\InstallIcon.bmp")
-  FILE(GLOB files "${CMAKE_CURRENT_BINARY_DIR}/Debug/*")
-  INSTALL(FILES ${files} DESTINATION bin)
+  FILE(GLOB CLD_BINARY_FILES "${CMAKE_CURRENT_BINARY_DIR}/Debug/*")
+  INSTALL(FILES ${CLD_BINARY_FILES} DESTINATION bin)
   SET(CPACK_NSIS_INSTALLED_ICON_NAME "Debug\\\\cld.exe")
   SET(CPACK_NSIS_DISPLAY_NAME "CLD")
   SET(CPACK_NSIS_HELP_LINK "https:\\\\\\\\github.com/abhishekmishra/cld")
   SET(CPACK_NSIS_URL_INFO_ABOUT "https:\\\\\\\\github.com/abhishekmishra/cld")
   SET(CPACK_NSIS_CONTACT "abhishekmishra3@gmail.com")
   SET(CPACK_NSIS_MODIFY_PATH ON)
+  SET(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
 ELSE(WIN32 AND NOT UNIX)
   SET(CPACK_STRIP_FILES "cld")
   SET(CPACK_SOURCE_STRIP_FILES "")
