moved most of the calls to new zclk api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,10 @@ include_directories( src )
 # Setup the list of source files
 set( CLD_SOURCES
   src/cld_common.c
-#  src/cld_ctr.c
-#  src/cld_img.c
-#  src/cld_net.c
-#  src/cld_sys.c
+  src/cld_ctr.c
+  src/cld_img.c
+  src/cld_net.c
+  src/cld_sys.c
   src/cld_vol.c
   src/cld.c
   src/tokenizer.c
@@ -43,10 +43,10 @@ set( CLD_SOURCES
   src/mustach-json-c.c
 
   src/cld_common.h
-#  src/cld_ctr.h
-#  src/cld_img.h
-#  src/cld_net.h
-#  src/cld_sys.h
+  src/cld_ctr.h
+  src/cld_img.h
+  src/cld_net.h
+  src/cld_sys.h
   src/cld_vol.h
   src/histedit.h
   src/cld_lua.h
